2966# stop tracking .idea

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,46 @@
-# Project exclude paths
-/iot-micro-auth/target/
-/iot-micro-common/target/
-/iot-micro-gateway/target/
-/iot-micro-redis/target/
-/iot-micro-shiro/target/
-/iot-micro-test/target/
-/iot-provider-account/target/
-/iot-provider-ims-xml/target/
-/iot-scheduler/target/
+######################################################################
+# Build Tools
+
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
+######################################################################
+# IDE
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### JRebel ###
+rebel.xml
+### NetBeans ###
+nbproject/private/
+build/*
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+######################################################################
+# Others
+*.log
+*.xml.versionsBackup
+*.swp
+
+!*/build/*.java
+!*/build/*.html
+!*/build/*.xml
