--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "mqtt": "^4.3.7",
     "qs": "^6.10.1",
+    "uuid": "^8.3.2",
     "url": "^0.11.0",
     "vue": "^3.2.13",
     "vue-cropperjs": "^5.0.0",
