--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "element-plus": "^1.1.0-beta.24",
@@ -15,8 +20,8 @@
     "moment": "^2.29.1",
     "mqtt": "^4.3.7",
     "qs": "^6.10.1",
-    "uuid": "^8.3.2",
     "url": "^0.11.0",
+    "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-cropperjs": "^5.0.0",
     "vue-echarts": "^6.0.0",
