--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -8,14 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "element-plus": "^1.1.0-beta.24",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.0",
     "moment": "^2.29.1",
     "mqtt": "^4.3.7",
