--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "element-plus": "^1.1.0-beta.24",
+    "element-plus": "^2.2.0",
     "js-cookie": "^3.0.0",
     "moment": "^2.29.1",
     "mqtt": "^4.3.7",
