--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -37,14 +37,17 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "file-saver": "^2.0.5",
     "pl-table": "^2.7.5",
+    "postcss": "^8.4.14",
     "process": "0.11.10",
     "sass": "~1.32.8",
     "sass-loader": "~8.0.2",
+    "tailwindcss": "^3.0.24",
     "umy-ui": "^1.1.6",
     "xlsx": "^0.17.0"
   },
