--- a/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
@@ -15,7 +15,7 @@ spring:
     sentinel:
       transport:
         dashboard: uds.aacoptics.com:30844
-        client-ip: 127.0.0.1
+        client-ip: localhost
     gateway:
       globalcors:
         cors-configurations:
