--- a/microservice-base/microservice-organization/src/main/resources/bootstrap.yml
+++ b/microservice-base/microservice-organization/src/main/resources/bootstrap.yml
@@ -15,4 +15,4 @@ spring:
     sentinel:
       transport:
         dashboard: uds.aacoptics.com:30844
-        client-ip: localhost
+        port: 30719
