--- a/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
