--- a/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
@@ -14,15 +14,14 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-gateway-core</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.aacoptics</groupId>
-            <artifactId>microservice-webapps-parent</artifactId>
-            <version>1.0.0</version>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>bcpkix-jdk15on</artifactId>
+                    <groupId>org.bouncycastle</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
-
 
 </project>
