--- a/microservice-base/microservice-gateway/pom.xml
+++ b/microservice-base/microservice-gateway/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>microservice-gateway</artifactId>
     <packaging>pom</packaging>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
     <modules>
         <module>microservice-gateway-admin</module>
         <module>microservice-gateway-web</module>
@@ -18,33 +24,57 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alicp.jetcache</groupId>
-            <artifactId>jetcache-starter-redis</artifactId>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-webapps-parent</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>2.6.0</version>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-feign</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <!--skipTests>true</skipTests-->
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
             <plugin>
+                <!-- spring-boot-maven-plugin将maven打好的普通jar或war, 再次进行打包. 把之前maven默认打的包名字末尾添加上.original -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
+                        <id>repackage</id>
                         <goals>
+                            <!-- spring-boot: repackage your jar/war to be executable. -->
+                            <!-- 它如何将一个普通的jar重新打包为一个可执行的fat jar -->
                             <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <!-- 打包排除lombok -->
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                        <!-- 打包排除未配置Spring Boot配置注解处理器 -->
+                        <exclude>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-configuration-processor</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
