--- a/microservice-base/microservice-common/microservice-common-web/pom.xml
+++ b/microservice-base/microservice-common/microservice-common-web/pom.xml
@@ -109,6 +109,10 @@
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
         <!-- 日志 -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
@@ -126,17 +130,14 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>5.0.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.woodstox</groupId>
             <artifactId>woodstox-core</artifactId>
-            <version>6.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-            <version>3.2.7</version>
             <exclusions>
                 <exclusion>
                     <artifactId>woodstox-core</artifactId>
