--- a/microservice-base/microservice-organization/pom.xml
+++ b/microservice-base/microservice-organization/pom.xml
@@ -44,7 +44,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <!--skipTests>true</skipTests-->
+                    <skipTests>true</skipTests>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
