--- a/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
@@ -12,21 +12,17 @@
     <artifactId>microservice-gateway-web</artifactId>
 
     <dependencies>
+        <!-- Mock 单元测试 -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
+        <!-- gateway -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>bcpkix-jdk15on</artifactId>
-                    <groupId>org.bouncycastle</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
-        <!--网关签权客户端-->
+        <!-- 网关签权客户端 -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
