--- a/microservice-base/microservice-organization/pom.xml
+++ b/microservice-base/microservice-organization/pom.xml
@@ -29,8 +29,8 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.auth0</groupId>
