--- a/microservice-base/microservice-webapps/microservice-webapps-parent/pom.xml
+++ b/microservice-base/microservice-webapps/microservice-webapps-parent/pom.xml
@@ -20,6 +20,14 @@
         </dependency>
         <!--注册中心-->
         <dependency>
+            <groupId>org.hdrhistogram</groupId>
+            <artifactId>HdrHistogram</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <exclusions>
