--- a/microservice-base/microservice-common/pom.xml
+++ b/microservice-base/microservice-common/pom.xml
@@ -16,6 +16,7 @@
         <module>microservice-common-core</module>
         <module>microservice-common-feign</module>
         <module>microservice-common-web</module>
+        <module>microservice-common-cache</module>
     </modules>
 
 </project>
