--- a/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-cache</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-gateway-core</artifactId>
         </dependency>
