--- a/microservice-base/microservice-organization/pom.xml
+++ b/microservice-base/microservice-organization/pom.xml
@@ -29,6 +29,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-cache</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
