--- a/microservice-base/microservice-authorization/microservice-oauth/Dockerfile
+++ b/microservice-base/microservice-authorization/microservice-oauth/Dockerfile
@@ -1,4 +1,4 @@
-FROM 10.233.76.39/microservice/java:8
+FROM harbor.aacoptics.com/jdk/openjdk:8
 #作者
 MAINTAINER yan shangqi
 #声明一个挂载点，容器内此路径会对应宿主机的某个文件夹
