--- a/microservice-base/microservice-common/microservice-common-cache/pom.xml
+++ b/microservice-base/microservice-common/microservice-common-cache/pom.xml
@@ -22,6 +22,20 @@
             <artifactId>microservice-common-core</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <!-- redis缓存 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <!-- jet cache -->
         <dependency>
             <groupId>org.checkerframework</groupId>
             <artifactId>checker-qual</artifactId>
