--- a/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-admin/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-webapps-parent</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
             <artifactId>microservice-common-cache</artifactId>
             <version>1.0.0</version>
         </dependency>
