--- a/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-cloud</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
             <artifactId>microservice-common-cache</artifactId>
             <version>1.0.0</version>
         </dependency>
@@ -26,6 +31,17 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <!--redis限流-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.lettuce</groupId>
+                    <artifactId>lettuce-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- 网关签权客户端 -->
         <dependency>
