--- a/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
@@ -14,7 +14,7 @@ spring:
         file-extension: yaml
     sentinel:
       transport:
-        dashboard: uds.aacoptics.com:30844
+        dashboard: k8s.aacoptics.com:30844
     gateway:
       globalcors:
         cors-configurations:
