--- a/microservice-base/microservice-authorization/microservice-perms/src/main/resources/bootstrap.yml
+++ b/microservice-base/microservice-authorization/microservice-perms/src/main/resources/bootstrap.yml
@@ -14,4 +14,4 @@ spring:
         file-extension: yaml
     sentinel:
       transport:
-        dashboard: uds.aacoptics.com:30844
+        dashboard: k8s.aacoptics.com:30844
